--- a/content/html/concepts/tags/terms/h1-h6/h1-h6.md
+++ b/content/html/concepts/tags/terms/h1-h6/h1-h6.md
@@ -40,3 +40,5 @@ Represents a text heading for a section of content, with `<h1>` being the highes
   </body>
 </html>
 ```
+
+ ![Output of the example above for headings](https://raw.githubusercontent.com/Codecademy/docs/main/media/heading-example.png)
